Add event to the education journal

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -129,6 +129,12 @@
  palaiologos_events.15.f: "‘Οἰκονομία ἄνευ δικαιοσύνης ἐστὶ δουλεία’ — ‘Economy without justice is servitude,’ writes a philosopher of the capital. Yet many proclaim this new age as the dawn of the Empire’s second spring — a world forged not of marble, but of steel."
  palaiologos_events.15.a: "Let the world witness the rebirth of Roman might."
 
+ palaiologos_events.16.t: "The Schools of Renewal"
+ palaiologos_events.16.d: "The Synkletos has enacted reforms that bring learning to villages and towns alike. From humble children to sons of the countryside, the [ROOT.GetCountry.GetAdjective] populace gains the skills to trade, calculate, and correspond with merchants across the West."
+ palaiologos_events.16.f: "Where once the landbound peasantry labored in ignorance, now they measure, write, and negotiate. In their hands lies the seed of future wealth, and with their minds, the Empire’s strength is renewed."
+ palaiologos_events.16.a: "Knowledge shall be the Empire’s inheritance."
+
+
 
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
