Added event to police journal add flavored the modifiers

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -134,7 +134,10 @@
  palaiologos_events.16.f: "Where once the landbound peasantry labored in ignorance, now they measure, write, and negotiate. In their hands lies the seed of future wealth, and with their minds, the Empire’s strength is renewed."
  palaiologos_events.16.a: "Knowledge shall be the Empire’s inheritance."
 
-
+ palaiologos_events.17.t: "The Countrysides Pacified"
+ palaiologos_events.17.d: "Through the firm hand of the Basileus and the diligence of his tagmata, the λῃσταί (lēstai, brigands) who once plagued our villages have been brought to heel. Those who once struck fear now labor in the fields, serving the Empire and the law."
+ palaiologos_events.17.f: "The people can walk freely upon the roads of the provinces once more, and the authority of the state is strengthened in every hamlet and market. The order of the Empire is restored."
+ palaiologos_events.17.a: "The Basileus’ justice prevails."
 
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
