laws now affect reform support in the plc succession JE
- laws now affect reform support in the plc succession JE

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -13,6 +13,10 @@
  br_plc_sucession_reform_progress_bar: "Reform support"
  br_plc_sucession_reform_progress_bar_desc: "$br_plc_sucession_reform_progress_bar$"
  br_plc_succession_from_intelligentsia_clout_loc: "[GetInterestGroupVariant('ig_intelligentsia',GetPlayer).GetNameWithCountryVariant] [concept_clout]"
+ br_plc_succession_has_jadwigan_approved_distribution_of_power_law_loc: " has a [GetLawGroup('lawgroup_distribution_of_power').GetName] that is supported by [GetIdeology('br_ideology_jadwigan_reformist').GetName]"
+ br_plc_succession_has_jadwigan_approved_governance_principles_law_loc: " has a [GetLawGroup('lawgroup_governance_principles').GetName] that is supported by [GetIdeology('br_ideology_jadwigan_reformist').GetName]"
+ br_plc_succession_has_jadwigan_approved_bureaucracy_law_loc: " has a [GetLawGroup('lawgroup_bureaucracy').GetName] that is supported by [GetIdeology('br_ideology_jadwigan_reformist').GetName]"
+ br_plc_succession_has_jadwigan_approved_taxation_law_loc: " has a [GetLawGroup('lawgroup_taxation').GetName] that is supported by [GetIdeology('br_ideology_jadwigan_reformist').GetName]"
 
  ###
  ###Decrees
