laws now affect reform support in the plc succession JE
- laws now affect reform support in the plc succession JE

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -987,3 +987,10 @@
  #Noble Last Names
  Van_vlaanderen: "Van Vlaanderen"
  #Common Last Names
+
+#Polish
+ #Male First Names
+ #Female First Names
+ jadwiga: "Jadwiga"
+ #Noble Last Names
+ #Common Last Names
