added language_bulgaro_roman (Bolgarikē) and language_illyro_roman (Illyrōmaïkē)
Since I already changed the Bulgarian and Albanian culture names to more hellenic forms to represent them remaining under roman rule for  far longer than historically so their languages changed with all the greek influences.

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -64,9 +64,12 @@
  colonial_heritage: "Colonial"
  elysian_heritage: "Elysian"
  african_settler: "African Settler"
+ heritage_egyptian: "Egyptian"
+
  language_elysian:  "Elysian"
  language_coptic: "Coptic"
- heritage_egyptian: "Egyptian"
+ language_bulgaro_roman: "Bolgarikē"
+ language_illyro_roman: "Illyrōmaïkē" #Arbanitikē"
 
  #These are for base game cultures that have been removed from the mod so they don't show up in the tooltips.
  heritage_removed_culture: "Heritage Removed"
