br_ere_culture_change events
some events for the appearance of regional cultures

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -578,3 +578,9 @@
  br_wre_event.1.f: "He climbed the old curia, as the sky darkened with storm clouds. The tales of the old patricians said that the senators would climb the curia and wait for a sign of the gods' favor. He sat, but not for long. Lightning cracked the sky, and a golden eagle landed by the gutter.\n\nAnd he wept: Rome would rise once more."
  br_wre_event.1.a: "Rome will rise again."
  br_root_gets_claims_on_wre_territory_tt: "[ROOT.GetCountry.GetName] get a claim of all of the territory that once belonged to the $br_WRE$"
+
+ br_ere_culture_change.1.t: "Rise of the Kappadokioi"
+ br_ere_culture_change.1.d: "Kappadocia has long been a land of soldiers and strongmen — ever Roman in name, yet ever distant in spirit. Its people now speak less of the Empire and more of their own homeland, calling themselves Kappadokioi rather than Rōmaíōi."
+ br_ere_culture_change.1.f: "Generations of frontier life and local rule have shaped them into a people apart: pious, hardy, and proud of their mountain blood. They remain bound to us in faith and memory, yet their hearts have turned inward to the land that made them."
+ br_ere_culture_change.1.a: "Let the Kappadokioi be known — Romans of the highland frontier."
+ br_ere_culture_change_cappadocian: "The Kappadokioi emerge as a distinct culture within the Empire."
