created a starting event for the new ERE starting war.

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -281,6 +281,11 @@
  br_anatolian_revolt.2.a: "Another usurper cloaked in nostalgia—he must be dealt with swiftly."
  br_anatolian_revolt.2.b: "Recognize their autonomy and hold the peace—for now."
 
+ br_anatolian_revolt.6.t: "The Revolt of the Antiochian Dynatói"
+ br_anatolian_revolt.6.d: "Reports from the East speak of open defiance. The strategoi of Antiochia, led by Dalassenos — a man of ancient name and boundless ambition — have raised their standards against imperial authority.\n\nUnder the guise of protecting the Empire from weakness and corruption, Dalassenos has seized command of the local themata and declared that the East will no longer submit to decrees from Constantinople. The Antiochian dynatói rally to his cause, claiming to defend Roman honor even as they tear at the unity of the realm.\n\nOnce again, the frontier burns with the fire of self-appointed saviors."
+ br_anatolian_revolt.6.f: "‘The Emperor’s word reaches us too late,’ Dalassenos proclaimed before his troops. ‘If Constantinople forgets what it means to rule, then Antiochia shall remember for her.’"
+ br_anatolian_revolt.6.a: "Rally the Tagmata — Antiochia will obey the Basileus."
+
  greek_revolt.1.t: "Latin Incursion into the Aegean"
  greek_revolt.1.d: "A coalition fleet led by Venice has launched a sudden assault across the eastern seas. The lightly garrisoned islands of Cyprus, Crete, and the Ionian chain have fallen swiftly to their advance. Now, a sizable Latin force has landed in Attica itself, threatening the very heart of Hellas."
  greek_revolt.1.f: "Latin banners fly over once-loyal islands. Venice, backed by a coalition of western powers, has moved decisively—occupying strategic positions throughout the Aegean and seizing control of Attica. Whether this is a show of strength or a prelude to conquest remains uncertain, but the challenge to Romaíon sovereignty is unmistakable."
