--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -584,8 +584,8 @@
  br_wre_event.1.a: "Rome will rise again."
  br_root_gets_claims_on_wre_territory_tt: "[ROOT.GetCountry.GetName] get a claim of all of the territory that once belonged to the $br_WRE$"
 
- br_ere_culture_change.1.t: "Rise of the Kappadokioi"
- br_ere_culture_change.1.d: "Kappadocia has long been a land of soldiers and strongmen — ever Roman in name, yet ever distant in spirit. Its people now speak less of the Empire and more of their own homeland, calling themselves Kappadokioi rather than Rōmaíōi."
- br_ere_culture_change.1.f: "Generations of frontier life and local rule have shaped them into a people apart: pious, hardy, and proud of their mountain blood. They remain bound to us in faith and memory, yet their hearts have turned inward to the land that made them."
- br_ere_culture_change.1.a: "Let the Kappadokioi be known — Romans of the highland frontier."
- br_ere_culture_change_cappadocian: "The Kappadokioi emerge as a distinct culture within the Empire."
+ br_ere_culture_change.1.t: "The Kappadokioi of the Highlands"
+ br_ere_culture_change.1.d: "Recorded in the annals of the Basileía Rōmaíōn, the province of Kappadocia remains one of firm yet peculiar character. Its people, known as the Kappadokioi, have long preserved their own customs and speech, distinct from those of the capital yet unshaken in their faith and service to the Empire.\n\nFrom these highlands have risen many generals, monks, and magnates — men as enduring as the stone of their homeland. Though they name themselves Romans, their hearts belong first to Kappadocia, whose hills have bred a spirit neither wholly imperial nor wholly provincial."
+ br_ere_culture_change.1.f: "‘They are Romans of another kind,’ writes a court chronicler, ‘their loyalty tempered by distance, their pride forged in the mountains. They bow to the Basileus, but the land itself commands their truest devotion.’"
+ br_ere_culture_change.1.a: "So stand the Kappadokioi — steadfast children of the Anatolian heartland."
+ br_ere_culture_change_cappadocian: "The Kappadokioi are acknowledged in imperial records as a distinct people within the Empire."
