testing some state modifers will see if I can get working later

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -34,6 +34,9 @@
  br_modifier_ere_modernized_army: "Anasystathenta Tagmata"
  br_modifier_ere_modernized_education: "Grammatikoí"
  br_modifier_ere_modernized_policing: "Taxis"
+ 
+ #br_modifier_state_anatolia: "Anatolian Aristocracy"
+ #br_modifier_state_hellas: "Hellenic Urbanism"
 
 
  #IG
