--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -115,6 +115,7 @@
  br_modifier_hun_army: "Fekete sereg"
  br_modifier_hussite_legacy: "Hussite Legacy"
  br_modifier_winged_hussars: "Winged Hussars"
+ br_modifier_the_issue_of_serfdom: "The Issue's of Serfdom"
  br_modifier_plc_succession_minor_support: "Minor Support"
  br_modifier_plc_succession_moderate_support: "Moderate Support"
  br_modifier_plc_succession_major_support: "Major Support"
