--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -41,4 +41,9 @@
  br_plc_succession_events.1.f: "His Majesty Sigismund III has passed. This is a sad day for our Commonwealth. But, there is hope! With his passing, a new monarch takes his place. The 23 year old Jadwiga II, King of Poland and Grand Duke of Lithuania! Like her namesake, we used the same loophole to make her our monarch, and with her astute personality and great intellect, perhaps we can turn the fortunes of our Commonwealth around! Long live her majesty!"
  br_plc_succession_events.1.a: "Long live her majesty!"
  br_plc_succession_jadwiga_is_new_ruler_tt: "[ROOT.GetCountry.GetRuler.GetFullName] is our new ruler"
+
+ ###
+ ###Modifiers
+ ###
+ br_modifier_plc_succession_jadwigan_land_reforms: "Jadwigan Land Reforms"
  
