--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -3,6 +3,7 @@
  ###
  ###Journal entries
  ###
+ #br_je_plc_succession
  br_je_plc_succession: "Succession"
  br_je_plc_succession_lobby: "Our King, Sigismund III, is slowly dying. We must prepare for the assention of his heir Princess Jadwiga."
  br_je_plc_succession_status: "We have currently reached #b #blue [GetPlayer.MakeScope.Var('br_plc_succession_acquired_reform_support_progress_var').GetFlagName]#!#! when it comes to reform support"
@@ -45,5 +46,11 @@
  ###
  ###Modifiers
  ###
+ #for br_je_plc_succession
+ br_modifier_plc_succession_minor_support: "Minor Support"
+ br_modifier_plc_succession_moderate_support: "Moderate Support"
+ br_modifier_plc_succession_major_support: "Major Support"
+ br_modifier_plc_succession_stunted_opposition: "Stunted Opposition"
+ #for br_je_plc_jadwigan_reform_1
  br_modifier_plc_succession_jadwigan_land_reforms: "Jadwigan Land Reforms"
  
