--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -18,6 +18,8 @@
  br_je_plc_jadwigan_reform_1_reason: "Though it ended centuries ago, the Slavic Slave Trade is still in our memory, it has created a unique hatred towards it within our culture. Afterall, it is the word Slav that the more modern Slave word comes from. Yet, we still practice it, but we call it Serfdom. Its defenders will try to say otherwise, but people are tied to the land of a lord. How is there a difference? It must be abolished, both for our modernization and for our morals!"
  br_plc_reform_has_completed_all_jadwigan_reforms_tt: "Has completed all Jadwigan Reform [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  br_plc_reform_has_completed_all_moderate_reforms_tt: "Has completed all Moderate Reform [Concept('concept_journal_entry', '$concept_journal_entries$')]"
+ br_plc_reform_increase_jadwigan_progress_tt: "Will increase the reform progress of the Jadwigan’s"
+ br_plc_reform_increase_moderates_progress_tt: "Will increase the reform progress of the Moderates’s"
 
  ###
  ###Scripted Progress Bars
