moved br_modifier_liberum_veto to PLC- Commonwealth.txt

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -12,14 +12,18 @@
  br_je_plc_reform_main: "Commonwealth Reforms"
  br_je_plc_reform_main_lobby: "TODO"
  br_je_plc_reform_main_reason: "TODO"
- #br_je_plc_jadwigan_reform_1
- br_je_plc_jadwigan_reform_1: "Jadwigan Reforms: Memories of the Slavic Slave Trade"
- br_je_plc_jadwigan_reform_1_lobby: "$br_je_plc_jadwigan_reform_1_reason$"
- br_je_plc_jadwigan_reform_1_reason: "Though it ended centuries ago, the Slavic Slave Trade is still in our memory, it has created a unique hatred towards it within our culture. Afterall, it is the word Slav that the more modern Slave word comes from. Yet, we still practice it, but we call it Serfdom. Its defenders will try to say otherwise, but people are tied to the land of a lord. How is there a difference? It must be abolished, both for our modernization and for our morals!"
  br_plc_reform_has_completed_all_jadwigan_reforms_tt: "Has completed all Jadwigan Reform [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  br_plc_reform_has_completed_all_moderate_reforms_tt: "Has completed all Moderate Reform [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  br_plc_reform_increase_jadwigan_progress_tt: "Will increase the reform progress of the Jadwigan’s"
  br_plc_reform_increase_moderates_progress_tt: "Will increase the reform progress of the Moderates’s"
+ #br_je_plc_jadwigan_reform_1
+ br_je_plc_jadwigan_reform_1: "Jadwigan Reforms: Memories of the Slavic Slave Trade"
+ br_je_plc_jadwigan_reform_1_lobby: "$br_je_plc_jadwigan_reform_1_reason$"
+ br_je_plc_jadwigan_reform_1_reason: "Though it ended centuries ago, the Slavic Slave Trade is still in our memory, it has created a unique hatred towards it within our culture. Afterall, it is the word Slav that the more modern Slave word comes from. Yet, we still practice it, but we call it Serfdom. Its defenders will try to say otherwise, but people are tied to the land of a lord. How is there a difference? It must be abolished, both for our modernization and for our morals!"
+ #br_je_plc_jadwigan_reform_2
+ br_je_plc_jadwigan_reform_2: "Jadwigan Reforms: Improving the Golden Liberty"
+ br_je_plc_jadwigan_reform_2_lobby: "$br_je_plc_jadwigan_reform_2_reason$"
+ br_je_plc_jadwigan_reform_2_reason: "When the Golden Liberty of our Nobles’ Democracy was formed, it was seen as something ahead of its time, giving us the most liberal system in Europe, if not the world! But now, it has become a force to just preserve the status quo, with the Liberum Veto being the most blatant weapon for the Szlachta. We have to change our system, making it more fair, even expanding it if we can!"
 
  ###
  ###Scripted Progress Bars
