--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -74,4 +74,5 @@
  br_modifier_plc_succession_stunted_opposition: "Stunted Opposition"
  #for br_je_plc_jadwigan_reform_1
  br_modifier_plc_reform_jadwigan_land_reforms: "Jadwigan Land Reforms"
+ br_modifier_plc_reform_jadwigan_liberties: "Jadwigan Liberties"
  
