Added more new modifiers for the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -75,4 +75,15 @@
  #for br_je_plc_jadwigan_reform_1
  br_modifier_plc_reform_jadwigan_land_reforms: "Jadwigan Land Reforms"
  br_modifier_plc_reform_jadwigan_liberties: "Jadwigan Liberties"
+ br_modifier_plc_reform_restored_warsaw_confederation: "Restored Warsaw Confederation"
+ br_modifier_plc_reform_jadwigan_economy: "Jadwigan Economy"
+ br_modifier_plc_reform_hands_off_economy: "Hands Off Economy"
+ br_modifier_plc_reform_grand_army_of_the_commonwealth: "Grand Army Of The Commonwealth"
+ br_modifier_plc_reform_commonwealther_home_army: "Commonwealther Home Army"
+ br_modifier_plc_reform_jadwigan_reforms: "Jadwigan Reforms"
+ br_modifier_plc_reform_szlachta_endorsed_land_reforms: "Szlachta Endorsed Land Reforms"
+ br_modifier_plc_reform_golden_liberty_reborn: "Golden Liberty Reborn"
+ br_modifier_plc_reform_new_treaty_of_hadiach: "New Treaty of Hadiach"
+ br_modifier_plc_reform_sejmist_economic_plan: "Sejmist Economic Plan"
+ br_modifier_plc_reform_moderate_reforms: "Moderate Reforms"
  
