--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -24,6 +24,10 @@
  br_je_plc_jadwigan_reform_2: "Jadwigan Reforms: Improving the Golden Liberty"
  br_je_plc_jadwigan_reform_2_lobby: "$br_je_plc_jadwigan_reform_2_reason$"
  br_je_plc_jadwigan_reform_2_reason: "When the Golden Liberty of our Nobles’ Democracy was formed, it was seen as something ahead of its time, giving us the most liberal system in Europe, if not the world! But now, it has become a force to just preserve the status quo, with the Liberum Veto being the most blatant weapon for the Szlachta. We have to change our system, making it more fair, even expanding it if we can!"
+ #br_je_plc_jadwigan_reform_3
+ br_je_plc_jadwigan_reform_3: "Jadwigan Reforms: The Minorities of the Commonwealth"
+ br_je_plc_jadwigan_reform_3_lobby: "$br_je_plc_jadwigan_reform_3_reason$"
+ br_je_plc_jadwigan_reform_3_reason: "One of our Reform points, though unpopular to many, was to end our policies of Polonization and to restore the strength of the Warsaw Confederation. We have many minorities in our lands, from Jews, Germans, Ruthenians, Russians, etc… They need to have their voices heard or risk separatism within our borders and our autonomies."
 
  ###
  ###Scripted Progress Bars
