--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -104,6 +104,7 @@
  br_modifier_russia_buff_2: "Rus"
  br_modifier_boyars: "Boyars"
  br_modifier_cossacks: "Cossacks"
+ br_modifier_integrated_cossacks: "Integrated Cossacks"
  br_modifier_fur_trade: "Fur Trade"
  br_modifier_golden_liberty: "Golden Liberty"
  br_modifier_eastern_slavery: "Eastern Slavery"
