--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -46,6 +46,14 @@
  br_je_plc_reform_main_progress_bar_second_desc: "Jadwigan"
 
  ###
+ ###Scripted Buttons
+ ###
+ br_je_add_lithuanian_as_primary_culture_button: "Accept $lithuanian$"
+ br_je_add_lithuanian_as_primary_culture_button_desc: "Add the $lithuanian$ [concept_culture] as a [Concept('concept_primary_cultures','$concept_primary_culture$')]"
+ br_je_add_ukrainian_as_primary_culture_button: "Accept $ukrainian$"
+ br_je_add_ukrainian_as_primary_culture_button_desc: "Add the $ukrainian$ [concept_culture] as a [Concept('concept_primary_cultures','$concept_primary_culture$')]"
+
+ ###
  ###Decrees
  ###
  br_decree_increase_jadwigan_support: "Increase Jadwigan Support"
