--- a/localization/french/br_modifiers_l_french.yml
+++ b/localization/french/br_modifiers_l_french.yml
@@ -36,6 +36,7 @@
  br_modifier_tribal_warriors: "Tribal Warriors"
  br_modifier_boyars: "Boyars"
  br_modifier_cossacks: "Cossacks"
+ br_modifier_integrated_cossacks: "Integrated Cossacks"
  br_modifier_tithe: "Papal Tithe"
  br_modifier_persian_emperor: "Shah of Shahs"
  br_modifier_persian_satraps: "Satrapies"
