--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -52,6 +52,8 @@
  br_je_add_lithuanian_as_primary_culture_button_desc: "Add the $lithuanian$ [concept_culture] as a [Concept('concept_primary_cultures','$concept_primary_culture$')]"
  br_je_add_ukrainian_as_primary_culture_button: "Accept $ukrainian$"
  br_je_add_ukrainian_as_primary_culture_button_desc: "Add the $ukrainian$ [concept_culture] as a [Concept('concept_primary_cultures','$concept_primary_culture$')]"
+ br_je_negotiate_with_the_cossacks_button: "Negotiate with the Cossacks"
+ br_je_negotiate_with_the_cossacks_button_desc: "Negotiate with the Cossacks"
 
  ###
  ###Decrees
