Added a new sub JE's to the br_je_plc_reform_main

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -28,6 +28,10 @@
  br_je_plc_jadwigan_reform_3: "Jadwigan Reforms: The Minorities of the Commonwealth"
  br_je_plc_jadwigan_reform_3_lobby: "$br_je_plc_jadwigan_reform_3_reason$"
  br_je_plc_jadwigan_reform_3_reason: "One of our Reform points, though unpopular to many, was to end our policies of Polonization and to restore the strength of the Warsaw Confederation. We have many minorities in our lands, from Jews, Germans, Ruthenians, Russians, etc… They need to have their voices heard or risk separatism within our borders and our autonomies."
+ #br_je_plc_jadwigan_reform_4
+ br_je_plc_jadwigan_reform_4: "Jadwigan Reforms: A New Economic Model"
+ br_je_plc_jadwigan_reform_4_lobby: "$br_je_plc_jadwigan_reform_4_reason$"
+ br_je_plc_jadwigan_reform_4_reason: "TODO."
 
  ###
  ###Scripted Progress Bars
