added new character traits

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -103,4 +103,13 @@
  br_modifier_plc_reform_new_treaty_of_hadiach: "New Treaty of Hadiach"
  br_modifier_plc_reform_sejmist_economic_plan: "Sejmist Economic Plan"
  br_modifier_plc_reform_moderate_reforms: "Moderate Reforms"
+
+
+ ###
+ ###Character traits
+ ###
+ br_succesful_reformer: "Succesful Reformer"
+ br_succesful_reformer_desc: "This Character is a succesful reformer"
+ br_succesful_compromiser: "Succesful Compromiser"
+ br_succesful_compromiser_desc: "This Character is a succesful compromiser"
  
