Added all of the moderate sub JE's to the br_je_plc_reform_main

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -33,6 +33,21 @@
  #br_je_plc_jadwigan_reform_5
  br_je_plc_jadwigan_reform_5: "Jadwigan Reforms: Military Reformation"
  br_je_plc_jadwigan_reform_5_reason: "TODO"
+ #br_je_plc_moderate_reform_1
+ br_je_plc_moderate_reform_1: "Moderate Reform: Ending Feudalism"
+ br_je_plc_moderate_reform_1_reason: "The Feudalistic Model of Land Management has been slowly becoming more and more obsolete as the decades go by. But, we must be cautious as to not upset the Szlachta. Perhaps an option where the peasants are “free” but still work for their former lords."
+ #br_je_plc_moderate_reform_2
+ br_je_plc_moderate_reform_2: "Moderate Reform: Streamlining the Sejm"
+ br_je_plc_moderate_reform_2_reason: "The fact that we have the Sejm has always been a unique part of our governance. Of the nations of Europe, we have been one of the few to have such a liberalized institution! But in recent years it has been stunted by the concept of the Liberum Veto. It has been used more and more as a way for the Szlachta to gain more power, now we must end this practice and reform the Sejm"
+ #br_je_plc_moderate_reform_3
+ br_je_plc_moderate_reform_3: "Moderate Reform: Preventing another Failure at Hadiach"
+ br_je_plc_moderate_reform_3_reason: "Over a Century ago representatives from the various peoples of the Commonwealth went to negotiate the treatment of the various minorities of our nation. But it failed, and a revolt happened causing our current decentralized situation for our Commonwealth. We must try to negotiate again, in order to have hope to reunite the Commonwealth"
+ #br_je_plc_moderate_reform_4
+ br_je_plc_moderate_reform_4: "Moderate Reform: An Outdated Economy"
+ br_je_plc_moderate_reform_4_reason: "Maintaining funding has always been difficult thanks to the systems of noble privileges that have only grown stronger over the years. But like everything else, we must go at the change slowly as to not upset the nobility and risk a revolt."
+ #br_je_plc_moderate_reform_5
+ br_je_plc_moderate_reform_5: "Moderate Reforms: Military Reformation"
+ br_je_plc_moderate_reform_5_reason: "One Universal truth both moderate reformers and full reformers can agree on is, our military needs to massively change. The levy system is becoming increasingly outdated, having a military system where we have at least a small amount of soldiers ready at all times would be preferable."
 
  ###
  ###Scripted Progress Bars
