Renamed the PLC
- Renamed the PLC from the Commonwealth to Poland-Lithuania

--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -106,8 +106,8 @@
  PAP_ADJ: "Roman"
  PHI: "Mareshia"
  PHI_ADJ: "Mareshia-go"
- PLC: "Commonwealth"
- PLC_ADJ: "Commonwealth"
+ PLC: "Poland-Lithuania"
+ PLC_ADJ: "Poland-Lithuania"
  ROM: "United Principalities"
  ROM_ADJ: "Principalities"
  RUS: "Russia"
