Added 2 new scripted buttons for new plc JE's

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -78,6 +78,10 @@
  br_je_add_ukrainian_as_primary_culture_button_desc: "Add the $ukrainian$ [concept_culture] as a [Concept('concept_primary_cultures','$concept_primary_culture$')]"
  br_je_negotiate_with_the_cossacks_button: "Negotiate with the Cossacks"
  br_je_negotiate_with_the_cossacks_button_desc: "Negotiate with the Cossacks"
+ br_je_plc_reform_the_commonwealth_form_the_commonwealth_button: "Form the $dyn_c_commonwealth$"
+ br_je_plc_reform_the_commonwealth_form_the_commonwealth_button_desc: "Form the $dyn_c_commonwealth$"
+ br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button: "From the $dyn_c_commonwealth$"
+ br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button_desc: "From the $dyn_c_commonwealth$"
 
  ###
  ###Decrees
