--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -80,8 +80,10 @@
  br_je_negotiate_with_the_cossacks_button_desc: "Negotiate with the Cossacks"
  br_je_plc_reform_the_commonwealth_form_the_commonwealth_button: "Form the $dyn_c_commonwealth$"
  br_je_plc_reform_the_commonwealth_form_the_commonwealth_button_desc: "Form the $dyn_c_commonwealth$"
+ br_je_plc_reform_the_commonwealth_form_the_commonwealth_button_tt: "Will reform our nation as the $dyn_c_commonwealth$"
  br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button: "From the $dyn_c_commonwealth$"
  br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button_desc: "From the $dyn_c_commonwealth$"
+ br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button_tt: "Will reform our nation as the $dyn_c_commonwealth$"
 
  ###
  ###Decrees
