Added 2 new JE's to the PLC around the formation of the Commonwealth

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -52,6 +52,16 @@
  #br_je_plc_moderate_reform_5
  br_je_plc_moderate_reform_5: "Moderate Reforms: Military Reformation"
  br_je_plc_moderate_reform_5_reason: "One Universal truth both moderate reformers and full reformers can agree on is, our military needs to massively change. The levy system is becoming increasingly outdated, having a military system where we have at least a small amount of soldiers ready at all times would be preferable."
+ #br_je_plc_reform_the_commonwealth
+ br_je_plc_reform_the_commonwealth: "Reform the $dyn_c_commonwealth$"
+ br_je_plc_reform_the_commonwealth_reason: "With the Jadwigan Reforms finished, we have shown to our constituent autonomies we are willing and able to change and make their peoples fully equal in the Commonwealth, no more of our favoritism to just our fellow Poles. We must now propose full reunification and bring our nation together once more!"
+ br_plc_has_formed_the_commonwealth_tt: "Has formed the $dyn_c_commonwealth$"
+ br_plc_has_not_formed_the_commonwealth_tt: "Has not formed the $dyn_c_commonwealth$"
+ br_je_plc_reform_the_commonwealth_complete_tt: "$br_plc_has_formed_the_commonwealth_tt$"
+ #br_je_plc_reform_the_commonwealth
+ br_je_plc_centralizing_the_commonwealth: "Centralizing the $dyn_c_commonwealth$"
+ br_je_plc_centralizing_the_commonwealth_reason: "With the moderates getting their way, we at least opened ourselves up to some change. Our Lithuanian brothers are once again equal to us, and we are on the road to modernization. It is time we centralize ourself and make the Commonwealth whole once more."
+ br_je_plc_centralizing_the_commonwealth_complete_tt: "$br_plc_has_formed_the_commonwealth_tt$"
 
  ###
  ###Scripted Progress Bars
