Added the decision that lets you form the commonwealth thru conquest after the reform JE timed out

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -96,6 +96,13 @@
  br_je_plc_centralizing_the_commonwealth_form_the_commonwealth_button_tt: "Will reform our nation as the $dyn_c_commonwealth$"
 
  ###
+ ###Decisions
+ ###
+ br_plc_form_the_commonwealth_decision: "Form the $dyn_c_commonwealth$"
+ br_plc_form_the_commonwealth_decision_desc: "We will reform our nation into the $dyn_c_commonwealth$"
+ br_je_plc_form_the_commonwealth_decision_tt: "Will reform our nation as the $dyn_c_commonwealth$"
+
+ ###
  ###Decrees
  ###
  br_decree_increase_jadwigan_support: "Increase Jadwigan Support"
