Added new modifiers for the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -147,6 +147,14 @@
  br_modifier_plc_reform_new_treaty_of_hadiach: "New Treaty of Hadiach"
  br_modifier_plc_reform_sejmist_economic_plan: "Sejmist Economic Plan"
  br_modifier_plc_reform_moderate_reforms: "Moderate Reforms"
+ br_modifier_plc_angels_of_death: "Angels Of Death"
+ br_modifier_plc_true_winged_hussars: "True Winged Hussars"
+ br_modifier_plc_hussarian_armor_corps: "Hussarian Armor Corps"
+ br_modifier_plc_the_peoples_monarchy: "The Peoples’ Monarchy"
+ br_modifier_plc_reformed_baltic_fleet: "Reformed Baltic Fleet"
+ br_modifier_black_sea_trade: "Black Sea Trade"
+ br_modifier_plc_well_defended_states: "Well Defended States"
+ br_modifier_plc_extended_reach: "Extended Reach"
 
 
  ###
