Added a br_je_plc_reclaiming_the_baltic to the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -62,6 +62,10 @@
  br_je_plc_centralizing_the_commonwealth: "Centralizing the $dyn_c_commonwealth$"
  br_je_plc_centralizing_the_commonwealth_reason: "With the moderates getting their way, we at least opened ourselves up to some change. Our Lithuanian brothers are once again equal to us, and we are on the road to modernization. It is time we centralize ourself and make the Commonwealth whole once more."
  br_je_plc_centralizing_the_commonwealth_complete_tt: "$br_plc_has_formed_the_commonwealth_tt$"
+ #br_je_plc_reclaiming_the_baltic
+ br_je_plc_reclaiming_the_baltic: "Reclaiming the Baltic"
+ br_je_plc_reclaiming_the_baltic_lobby: "$br_je_plc_reclaiming_the_baltic_reason$"
+ br_je_plc_reclaiming_the_baltic_reason: "After our War with Sweden a few decades ago, we lost all of our Baltic holdings with the exception of the Lithuanian homeland. It is time to correct this, we must end the Swedes hegemony over the Baltic Sea!"
 
  ###
  ###Scripted Progress Bars
