Added br_je_plc_access_to_the_black_sea as JE to the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -66,6 +66,10 @@
  br_je_plc_reclaiming_the_baltic: "Reclaiming the Baltic"
  br_je_plc_reclaiming_the_baltic_lobby: "$br_je_plc_reclaiming_the_baltic_reason$"
  br_je_plc_reclaiming_the_baltic_reason: "After our War with Sweden a few decades ago, we lost all of our Baltic holdings with the exception of the Lithuanian homeland. It is time to correct this, we must end the Swedes hegemony over the Baltic Sea!"
+ #br_je_plc_access_to_the_black_sea
+ br_je_plc_access_to_the_black_sea: "Access to the Black Sea"
+ br_je_plc_access_to_the_black_sea_lobby: "$br_je_plc_access_to_the_black_sea$"
+ br_je_plc_access_to_the_black_sea_reason: "At our height, we almost had access to the Black Sea and its rich ports, but alas, we failed in this regard. We should try once more, the Black Sea holds some of the richest ports, not to mention we would have access to the Silk Road trade network via easier access to Constantinople"
 
  ###
  ###Scripted Progress Bars
