--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -70,6 +70,10 @@
  br_je_plc_access_to_the_black_sea: "Access to the Black Sea"
  br_je_plc_access_to_the_black_sea_lobby: "$br_je_plc_access_to_the_black_sea$"
  br_je_plc_access_to_the_black_sea_reason: "At our height, we almost had access to the Black Sea and its rich ports, but alas, we failed in this regard. We should try once more, the Black Sea holds some of the richest ports, not to mention we would have access to the Silk Road trade network via easier access to Constantinople"
+ #br_je_plc_securing_of_our_eastern_front
+ br_je_plc_securing_of_our_eastern_front: "Securing of Our Eastern Front"
+ br_je_plc_securing_of_our_eastern_front_lobby: "$br_je_plc_securing_of_our_eastern_front$"
+ br_je_plc_securing_of_our_eastern_front_reason: "The vast Eurasian Steppes are home to many threats, such as that of the remnants of the Mongolian Empire and lack natural defenses. We should secure it by weakening our enemies and extending our borders to keep our enemies far from our Capital."
 
  ###
  ###Scripted Progress Bars
