Added br_je_plc_extending_our_reach as a JE to the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -68,12 +68,17 @@
  br_je_plc_reclaiming_the_baltic_reason: "After our War with Sweden a few decades ago, we lost all of our Baltic holdings with the exception of the Lithuanian homeland. It is time to correct this, we must end the Swedes hegemony over the Baltic Sea!"
  #br_je_plc_access_to_the_black_sea
  br_je_plc_access_to_the_black_sea: "Access to the Black Sea"
- br_je_plc_access_to_the_black_sea_lobby: "$br_je_plc_access_to_the_black_sea$"
+ br_je_plc_access_to_the_black_sea_lobby: "$br_je_plc_access_to_the_black_sea_reason$"
  br_je_plc_access_to_the_black_sea_reason: "At our height, we almost had access to the Black Sea and its rich ports, but alas, we failed in this regard. We should try once more, the Black Sea holds some of the richest ports, not to mention we would have access to the Silk Road trade network via easier access to Constantinople"
  #br_je_plc_securing_of_our_eastern_front
  br_je_plc_securing_of_our_eastern_front: "Securing of Our Eastern Front"
- br_je_plc_securing_of_our_eastern_front_lobby: "$br_je_plc_securing_of_our_eastern_front$"
+ br_je_plc_securing_of_our_eastern_front_lobby: "$br_je_plc_securing_of_our_eastern_front_reason$"
  br_je_plc_securing_of_our_eastern_front_reason: "The vast Eurasian Steppes are home to many threats, such as that of the remnants of the Mongolian Empire and lack natural defenses. We should secure it by weakening our enemies and extending our borders to keep our enemies far from our Capital."
+ #br_je_plc_extending_our_reach
+ br_je_plc_extending_our_reach: "Extending Our Reach"
+ br_je_plc_extending_our_reach_lobby: "$br_je_plc_extending_our_reach_reason$"
+ br_je_plc_extending_our_reach_reason: "Due to our internal issues we have been left behind in the Colonial game compared to other powers in Europe. With the securing of our former Baltic holdings we can now work on expanding out of Europe and claim a place for us in the sun!"
+ br_je_plc_extending_our_reach_complete_tt: "Are outside of Europe"
 
  ###
  ###Scripted Progress Bars
