Added br_je_plc_the_legacy_of_the_winged_hussars as a JE to the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -79,6 +79,13 @@
  br_je_plc_extending_our_reach_lobby: "$br_je_plc_extending_our_reach_reason$"
  br_je_plc_extending_our_reach_reason: "Due to our internal issues we have been left behind in the Colonial game compared to other powers in Europe. With the securing of our former Baltic holdings we can now work on expanding out of Europe and claim a place for us in the sun!"
  br_je_plc_extending_our_reach_complete_tt: "Are outside of Europe"
+ #br_je_plc_the_legacy_of_the_winged_hussars
+ br_je_plc_the_legacy_of_the_winged_hussars: "The Legacy of the Winged Hussars"
+ br_je_plc_the_legacy_of_the_winged_hussars_lobby: "$br_je_plc_the_legacy_of_the_winged_hussars_reason$"
+ br_je_plc_the_legacy_of_the_winged_hussars_reason: "It is a fact that Warfare is changing. With it becoming mechanized, our famous Winged Hussars are unfortunately also becoming outdated and their legacy becoming obsolete."
+ br_je_if_has_researched_stormtroopers_tt: "If has researched [GetTechnology('stormtroopers').GetName]"
+ br_je_if_has_researched_military_aviation_tt: "If has researched [GetTechnology('military_aviation').GetName]"
+ br_je_if_has_researched_mobile_armor_tt: "If has researched [GetTechnology('mobile_armor').GetName]"
 
  ###
  ###Scripted Progress Bars
